# quick_check_vpic

./: LICENSE  README.md  config_example.yaml  mainwindow.py  mainwindow.ui  pyproject.toml  quick_check_vpic.py  requirements.txt
